[fix/paragraph-spacing] add margin start to paragraph block inside post-content

--- a/src/editor/blocks/post-content/styles/style.scss
+++ b/src/editor/blocks/post-content/styles/style.scss
@@ -10,6 +10,10 @@
         margin-right: auto;
     }
 
+    & > p {
+        margin-block-start: 1em !important;
+    }
+
     .guten-post-password-form {
         & > * {
             width: 100%;
